# CMakeLibDemo

APart/: APartConfig.cmake  CMakeLists.txt
APart/Export/: part.h
APart/Src/: part.cpp
testAPart/: CMakeLists.txt
testAPart/Src/: main.cpp
